--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+.flex{
+    display: flex;
+}
+
+.gap{
+    gap: 1.5rem;
+}
+
+.column{
+    flex-direction: column;
+}
