--- a/src/app/group-card/group-card.component.html
+++ b/src/app/group-card/group-card.component.html
@@ -1,1 +1,6 @@
-<p>group-card works!</p>
+<div>
+    <h2>Group {{index + 1}}</h2>
+    <ul *ngFor="let name of group">
+        <li>{{name}}</li>
+    </ul>
+</div>
